# trader

./: .gitignore  AGENTS.md  ARCHITECTURE_REFACTOR.md  CONTEXT.md  GEMINI.md  PROJECT.md  README.md  STRATEGY_GUIDE.md  TODO  docs  find_pairs.py  handoff.md  handover_prompt.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_kde.py  test_output.txt  tradable_pairs.csv
.agents/: AGENTS.md  CONTEXT.md  handoff.md
.content/docs/: CONTENT_SPEC.md  VISUAL_STYLE_GUIDE.md
.github/workflows/: bootstrap.yml  deploy.yml  health.yml  integration.yml  test.yml  validate_4h.yml
PLAN/: 00_MASTER_INDEX.md
PLAN/1_DEVELOPER_AND_AI_PROTOCOLS/: 01_coding_manifesto.md  02_llm_system_prompts.md  03_tdd_and_testing_rules.md  04_construction_phases.md
PLAN/2_SYSTEM_INFRASTRUCTURE/: 01_dual_sink_logging.md  02_state_reconciliation_auditor.md
PLAN/3_QUANT_AND_TRADING_ENGINE/: 01_universe_and_clustering.md  02_execution_loop.md  03_signals_and_ew_ols.md  04_twap_and_order_routing.md
PLAN/4_PORTFOLIO_AND_RISK/: 01_isolated_margin_mandates.md  02_capital_exposure_limits.md
PLAN/5_BACKTESTING_SIMULATION/: 01_vectorized_simulation.md  02_friction_and_funding_penalties.md
PLAN/6_ROAD_TO_PRODUCTION/: 01_production_roadmap.md  02_vps_deployment_guide.md  03_reporting_system.md  04_ci_cd_pipeline.md  05_telegram_integration.md  06_prefect_turbo_e2e_pipeline.md  07_configuration_architecture.md  08_agnostic_orchestrator.md  09_src_encapsulation.md  (+8 more)
configs/: README.md
data/: binance_BTC_USDT_1h_20240101_20260127.parquet
docs/: CORE.md  CORE_MIGRATION.md  EXCHANGE.md  EXCHANGE_MIGRATION.md  INTERFACES.md  INTERFACES_MIGRATION.md  MARKET_DATA.md  MARKET_DATA_MIGRATION.md  OPERATIONS.md  OPERATIONS_MIGRATION.md  PAIRS.md  PAIRS_MIGRATION.md  PROJECT_REENTRY_AUDIT.md  RESEARCH.md  RESEARCH_MIGRATION.md  TRADING.md  TRADING_MIGRATION.md  TRADING_SYSTEM_FLOW.md  _IMPLEMENTATION_AGENT_GUIDE.md  current-roadmap.md  engineering-rules.md  index.md  local-operator-runbook.md  system-design.md
implementation/: DATA_ASSESSMENT.md  DATA_FEATURES_PLAN.md  ENGINE_DESIGN.md  ENGINE_DOCUMENTATION.md  ENGINE_IMPLEMENTATION_PLAN.md  MASTER_PLAN.md  PHASE_1_BACKTESTING.md  PHASE_2_VALIDATION.md  PHASE_3_DASHBOARD.md  UNIVERSE_DESIGN.md
logs/: engine.jsonl
scripts/: discover_pairs.py  ghost_report.py  ghost_trader.py  mine_data.py  telegram_bot.py  vector_stress_test.py
simulation/: ARCHITECTURE.md  FEATURES.md  IMPLEMENTATION_PLAN.md  MARKET_GENERATION.md  README.md  REPLAY_AND_ASSERTIONS.md  ROADMAP.md  SCENARIO_DSL.md  STREAM_SIMULATION.md
tests/: README.md  test_engine_core.py  test_fetch_logic.py  test_run_profile_command.py  test_smoke.py  test_strategy_pairs.py
(+418 files in other folders)
