[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_strategy"
version = "0.1.0"
description = "High-frequency Bitcoin trading strategy"
authors = [{name = "Lucas Tkacz", email = "your_email@example.com"}]
dependencies = [
    "pandas",
    "numpy",
    "ccxt",
    "tqdm",
    "statsmodels",
    "matplotlib",
    "jupyter",
    "scipy",
    "duckdb",
    "aiohttp"
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*"]
