[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "stat-arb"
version = "0.0.0"
description = "Exchange-agnostic statistical-arbitrage research and trading platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.15",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["stat_arb*"]
namespaces = false

[tool.pytest.ini_options]
minversion = "8.3"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
testpaths = ["tests"]
markers = [
    "online: explicitly selected test requiring an external network or service",
    "demo: explicitly selected integration test permitted to mutate only an authorized sandbox/testnet",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
